1998-11-19  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Map.m ([Map_c -lispIn:]): Convert ArchiverPairs to key
	values and insert.

	* InputStream.m ([InputStream_c -getExpr]): Convert (key . value)
	to ArchiverPair.

	* InputStream.[hm] (ArchiverPair_c), collections.h,
	collections.m (_collections_implement): New type.

	* predicates.[hm]: Add symbolp and pairp.

1998-11-18  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* List.m ([List_any -getCountPerBlock]): abort instead of exit.

	* collections.h (List): The methods here aren't create-time; mark
	as USING phase.

1998-11-17  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* InputStream.[hm] (InputStream): New method setBoolean:
	and getBoolean.  Handle #f and #t from input.

	* Collection.m ([Collection_any -_lispInAttr_:]): New method for
	shared create-time expression option parsing. 
	[Collection_any -_lispOutAttr_:]): New using-time expression option
	output method.  Both are for subclass use.
	
	* List_GEN.m: Reformatting throughout.  New macros COUNT,
	FIRST, and FIRSTPREV to simplify code.

	* List.m ([List_any -lispIn:], [List_any -lispInCreate:], 
	[List_any -lispOut:]): New methods.  InitialValueSet not yet
	handled because a copy of that list is not saved from create-time.

	* Map.m ([Map_c -lispIn:], [Map_c -lispOut:], [Map_c
	-lispInCreate): New methods.  Support compareIntegers
	and compareIDs.  lispIn: pending for InputStream support of
	pair syntax (and conversion to expr Map).

	* List.h (List_any): Conform to Serialization protocol.
	Declare -lispIn: and -lispOut:.

	* Map.h (Map_c): Likewise.

	* collections.h (List, Map): Adopt Serialization protocol.
	(ArchiverValue): Add setBoolean: and getBoolean.

	* Collection.[hm], Map.[hm]: Reformatting throughout.

1998-11-16  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* predicates.[hm] (keywordp, valuep, arrayp): New predicates.

	* InputStream.m: Include misc.h instead of stdio.h and ctype.h
	Include predicates.h.